# PyRust

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  404.html  ARCHITECTURE.md  Cargo.toml  LOCAL_CI_GUIDE.md  Makefile  POC_VALIDATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml
.github/: CONTRIBUTING.md  README.md  RELEASE.md  RELEASE_WORKFLOW.md  dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  docs.yml
api/context/: index.html
api/dataframe/: index.html
api/operations/: index.html
architecture/overview/: index.html
architecture/python-bindings/: index.html
architecture/rust-core/: index.html
development/building/: index.html
development/contributing/: index.html
development/local-ci/: index.html
development/testing/: index.html
docs/: index.html  index.md  limitations.md  settings.html
docs/api/: context.md  dataframe.md  operations.md
docs/architecture/: overview.md  python-bindings.md  rust-core.md
docs/development/: building.md  contributing.md  local-ci.md  testing.md
docs/getting-started/: basic-operations.md  installation.md  quickstart.md
docs/search.index/desc/: 534c8adc3164.js
docs/search.index/normalizedName/: 6c6455186dce.js
docs/src/pyrust/dataframe/: mod.rs.html
docs/src/pyrust/session/: mod.rs.html
docs/user-guide/: column-operations.md  data-loading.md  dataframe.md  joins.md  performance.md  set-operations.md  sql-queries.md  transformations.md
examples/: basic_operations.py  column_operations.py  data_operations.py  joins_example.py  sql_queries.py
examples/data/: users.csv
getting-started/basic-operations/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
limitations/: index.html
python/pyrust/: __init__.py  column.py  dataframe.py  session.py
python/tests/: test_column_operations.py  test_compatibility.py  test_data_operations.py  test_dataframe.py  test_joins.py  test_sql.py
rust/: crates.js  help.html  src-files.js
rust/pyrust/: all.html  index.html
rust/search.index/: root.js
rust/src/pyrust/: lib.rs.html
rust/src/pyrust/dataframe/: mod.rs.html
rust/src/pyrust/session/: mod.rs.html
rust/src/pyrust/utils/: mod.rs.html
scripts/: ci-check.sh  create-release.sh
search/: search_index.json
src/: lib.rs
src/dataframe/: mod.rs
src/session/: mod.rs
src/utils/: mod.rs
user-guide/column-operations/: index.html
user-guide/data-loading/: index.html
user-guide/dataframe/: index.html
user-guide/joins/: index.html
user-guide/performance/: index.html
user-guide/set-operations/: index.html
user-guide/sql-queries/: index.html
user-guide/transformations/: index.html
