[package]
name = "pyrust"
version = "0.1.0"
edition = "2021"
authors = ["PyRust Contributors"]
description = "A Rust-based implementation of PySpark for high-performance distributed computing"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/yourusername/pyrust"

[lib]
name = "pyrust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.0", features = ["extension-module"] }
datafusion = "46.0.1"
arrow = "54.2.1"
arrow-schema = "54.3.1"
tokio = { version = "1.49", features = ["full"] }
anyhow = "1.0"

[build-dependencies]
pyo3-build-config = "0.28"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
